# larmindon

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  PIPEWIRE_NOTES.md  README.md  STACK.md  generate_icon.sh
.cargo/: config.toml
.claude/: settings.json
.claude/projects/-var-home-david-projects-larmindon/memory/: MEMORY.md  project_deployment.md  reference_flatpak.md
app/: .npmrc  index.html  overlay.html  package-lock.json  package.json  preferences.html  vite.config.ts
app/src/: App.css  App.tsx  CaptionOverlay.css  CaptionOverlay.tsx  Preferences.css  Preferences.tsx  overlay-main.tsx  preferences-main.tsx
app/src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json  webgpu.conf.json
app/src-tauri/.cargo/: config.toml
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: audio_config.rs  audio_engine.rs  font_enumeration.rs  lib.rs  main.rs  settings.rs  vad.rs
app/src-tauri/src/audio_capture/: cpal.rs  mod.rs  pipewire.rs
visualization/: index.html  pipeline.js  style.css
