[package]
name = "larmindon"
version = "0.1.0"
description = "Larmindon - Transcription Tool"
authors = ["edmistond"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "larmindon_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dark-light = "2"
cpal = { version = "0.17", optional = true }
rubato = "0.14"
parakeet-rs = "0.3"
rusqlite = { version = "0.31", features = ["bundled"] }
ort = "2.0.0-rc.12"
ndarray = "0.17"

[target.'cfg(target_os = "linux")'.dependencies]
pipewire = { version = "0.9", optional = true }
libspa = { version = "0.9", optional = true }

[features]
default = ["cpal", "pipewire"]
coreml = ["parakeet-rs/coreml"]
directml = ["parakeet-rs/directml"]
migraphx = ["parakeet-rs/migraphx"]
pipewire = ["dep:pipewire", "dep:libspa"]
cpal = ["dep:cpal"]

