[package]
name = "larmindon"
version = "0.1.0"
description = "Larmindon - Transcription Tool"
authors = ["edmistond"]
edition = "2021"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "larmindon_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
larmindon-core = { git = "https://github.com/edmistond/larmindon-core.git", branch = "main" }
larmindon-engine-nemotron = { git = "https://github.com/edmistond/larmindon-core.git", branch = "main", optional = true }
tauri = { version = "2.11.1", features = ["macos-private-api"] }
tauri-plugin-opener = "2.5.4"
tauri-plugin-dialog = "2.7.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dark-light = "2"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-text = "21"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_Graphics_DirectWrite"] }

[target.'cfg(target_os = "linux")'.dependencies]
fontconfig = { version = "0.8", optional = true }

[features]
default = ["cpal", "pipewire", "engine-nemotron"]
engine-nemotron = ["dep:larmindon-engine-nemotron"]
webgpu = ["larmindon-engine-nemotron?/webgpu"]
directml = ["larmindon-engine-nemotron?/directml"]
migraphx = ["larmindon-engine-nemotron?/migraphx"]
pipewire = ["larmindon-core/pipewire"]
cpal = ["larmindon-core/cpal"]
fontconfig = ["dep:fontconfig"]

[patch."https://github.com/edmistond/larmindon-core.git"]
larmindon-core = { path = "../../../larmindon-core/crates/larmindon-core" }
larmindon-engine-nemotron = { path = "../../../larmindon-core/crates/larmindon-engine-nemotron" }
